Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-16315

QMessageBox doesn't update its layout/size if the string content are changed/translated after QMessageBox is constructed

    XMLWordPrintable

Details

    • 0792215fa8d227617a2080af9f12fd7f486b87d6

    Description

      In the test case, if the translator is loaded before constructing the QMessageBox, everything is fine. otherwise the button size is not updated according to the string length, so part of the button text is clipped.

      Attachments

        1. screenshot.png
          screenshot.png
          5 kB
        2. main.cpp
          0.4 kB
        3. qt_et.qm
          0.4 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            sanonymous Nokia Qt Support (Inactive)
            Votes:
            2 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes