Fix for the button size calculation in qmessagebox.cpp

Actually use the calculated size for needed space instead of just
ignoring the return value.

Task-number: QTBUG-16315

Reviewed-by: Friedemann Kleint <Friedemann.Kleint@nokia.com>
(cherry picked from commit 0792215fa8d227617a2080af9f12fd7f486b87d6)
Change-Id: I0792215fa8d227617a2080af9f12fd7f486b87d6